# xielu

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: autograd.py  benchmark.py  test_reduced_precision.py  test_xielu.py  test_xielu_focused.py
uenv-recipe/: config.yaml  environments.yaml
xielu/: CMakeLists.txt
xielu/common/: utils.cuh
xielu/cpp/include/: xielu.hpp
xielu/cpp/src/: xielu.cpp
xielu/cuda/include/: xielu_impl.hpp
xielu/cuda/src/: xielu_impl.cu
xielu/ops/: __init__.py  wrappers.py
