[project]
name = "xielu"
version = "0.1"
description = "CUDA implementation of XIELU"
readme = "README.md"
authors = [{name = "CSCS"}]
requires-python = ">=3.10"
dependencies = [
    "torch >= 2.0", 
    "nvtx",
]

### ================== ###

[build-system]
requires = [
    "setuptools >=44",
    "wheel >=0.36",
    "cmake >=3.30",
    "torch >= 2.0",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
packages = ["xielu.ops"]

[project.optional-dependencies]
tests = [
    "unittest",
]
